# aws-calculator

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint-and-test.yml  release.yml
skills/aws-calculator/: SKILL.md
src/aws_calculator/: __init__.py  __main__.py  cli.py  server.py
src/aws_calculator/core/: __init__.py  builder.py  catalog.py  client.py  discovery.py  ec2.py  formatters.py  save.py  types.py  validation.py
src/aws_calculator/tools/: __init__.py  _ctx.py  catalog.py  estimate.py  read.py
tests/: conftest.py  test_builder.py  test_catalog.py  test_cli.py  test_client.py  test_discovery.py  test_ec2.py  test_formatters.py  test_integration.py  test_save.py  test_server.py  test_tools_estimate.py  test_types.py  test_validation.py
tests/manual/: test_cli.py  test_mcp.py
