[project]
name = "aws-calculator"
version = "0.1.0"
description = "CLI and MCP server for reading shared AWS Pricing Calculator estimates from calculator.aws and pricing.calculator.aws.eu"
authors = [{name = "Timo Runge"}]
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["aws", "mcp", "pricing", "calculator", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[project.scripts]
aws-calculator = "aws_calculator.cli:main"
aws-calculator-mcp-server = "aws_calculator.server:main"

[project.urls]
Homepage = "https://github.com/timorunge/aws-calculator"
Issues = "https://github.com/timorunge/aws-calculator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_calculator"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["aws_calculator"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "aws_calculator.server"
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the live calculator.aws API (require network)",
]
